Fix high contrast issues

--- a/styles/base/_status.scss
+++ b/styles/base/_status.scss
@@ -10,6 +10,7 @@
   display: inline-block;
   padding: .125em .75em;
   vertical-align: .125em;
+  border: 1px solid transparent;
   border-radius: var(--gin-border-l);
 }
 
