--- a/styles/layout/navigation.scss
+++ b/styles/layout/navigation.scss
@@ -66,8 +66,7 @@ body.gin--navigation {
     overflow-y: initial;
     padding-inline: 0;
     padding-block-start: 0;
-    border-right: 0;
-    box-shadow: 1px 0 0 var(--gin-border-color-layer);
+    border-right: 1px solid var(--gin-border-color-layer);
 
     // Hide on smaller screens for now as this is not ready yet.
     @include mq($to: medium) {
@@ -180,6 +179,10 @@ body.gin--navigation {
       &::before,
       &::after {
         background: var(--gin-color-primary);
+
+        @media (forced-colors: active) {
+          background-color: LinkText;
+        }
       }
 
       &:hover,
@@ -207,6 +210,10 @@ body.gin--navigation {
     &::before,
     &::after {
       background: var(--gin-color-primary);
+
+      @media (forced-colors: active) {
+        background-color: LinkText;
+      }
     }
   }
 
@@ -385,11 +392,19 @@ button.toolbar-link--sidebar-toggle {
 
     &, &:hover, &:focus {
       background: var(--gin-color-primary) !important;
+
+      @media (forced-colors: active) {
+        background: CanvasText !important;
+      }
     }
 
     &::before {
       --icon: #{icon('drupal')};
       background: var(--gin-bg-layer2) !important;
+
+      @media (forced-colors: active) {
+        background: Canvas !important;
+      }
     }
 
     span {
